--- a/css/styles.css
+++ b/css/styles.css
@@ -79,13 +79,6 @@ a {
   color: var(--hijau);
 }
 
-
-
-
-
-
-
-
 ol li {
   list-style-type: upper-greek;
   margin-left: 20px;
@@ -96,21 +89,37 @@ ol li {
   font-weight: bold;
 }
 
-div .gallery {
-  border: 1px solid #ccc;
+.row {
+  display: -ms-flexbox; /* IE10 */
+  display: flex;
+  -ms-flex-wrap: wrap; /* IE10 */
+  flex-wrap: wrap;
+  padding: 0 4px;
 }
 
-div.gallery img {
-  width: 100%;
-  height: auto;
+/* Create four equal columns that sits next to each other */
+.column {
+  -ms-flex: 25%; /* IE10 */
+  flex: 25%;
+  max-width: 25%;
+  padding: 0 4px;
 }
 
-div.desc {
-  padding: 15px;
+.column img {
+  margin-top: 8px;
+  vertical-align: middle;
+}
+
+div .desc {
   text-align: center;
+  font-family: "Roboto", sans-serif;
   font-size: 1.5em;
+  margin-top: 10px;
+  margin-bottom: 0;
+  margin-left: 20pt;
+  margin-right: 20px;
+  color: rgb(61, 60, 60);
 }
-
 .about {
   text-align: center;
   font-family: "Roboto", sans-serif;
@@ -122,13 +131,12 @@ div.desc {
   color: rgb(61, 60, 60);
 }
 
-@media only screen and (max-width: 700px) {
-  img {
-    width: 100%;
-  }
-}
-
 @media only screen and (max-width: 768px) {
+  .column {
+    -ms-flex: 50%;
+    flex: 50%;
+    max-width: 50%;
+  }
   .nav-menu {
     position: fixed;
     left: -100%;
