--- a/css/calender.css
+++ b/css/calender.css
@@ -36,11 +36,9 @@ span {
   text-align: left;
   font-family: "Roboto", sans-serif;
   font-size: 1.8em;
-  margin-top: 50px;
-  margin-bottom: 0;
+  margin-top: 30px;
+  margin-bottom: 20px;
   margin-left: 20pt;
   margin-right: 20px;
   color: rgb(61, 60, 60);
 }
-
-
