--- a/css/calender.css
+++ b/css/calender.css
@@ -55,12 +55,11 @@ span {
 }
 
 .clock {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translateX(-50%) translateY(-50%);
-  color: #17d4fe;
-  font-size: 60px;
-  font-family: Orbitron;
-  letter-spacing: 7px;
+  margin-left: 20px;
+  margin-top: 10px;
+  color: seagreen;
+  font-size: 1.5em;
+  font-weight: 400;
+  font-family: "Roboto", sans-serif;
+  letter-spacing: 3px;
 }
